<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="2"
                tools:ignore="NestedWeights">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:text="@string/setting_en"
                      android:textColor="@color/colorPrimary"
                      android:textSize="40sp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:orientation="vertical">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/btnBlue"
                    android:layout_margin="15sp"
                    android:text="@string/lunch_setting"
                    android:id="@+id/btn_main_setting_lunch"
                    android:textSize="30sp"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/btnBlue"
                    android:layout_margin="15sp"
                    android:text="@string/cash_setting"
                    android:id="@+id/btn_main_setting_cash"
                    android:textSize="30sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lunch"
                android:textSize="30sp"
                tools:ignore="NestedWeights"
                android:id="@+id/tv_main_bottom_lunch"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cash"
                android:id="@+id/tv_main_bottom_cash"
                android:textSize="30sp"
                tools:ignore="NestedWeights"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/history"
                android:id="@+id/tv_main_bottom_history"
                android:textSize="25sp"
                tools:ignore="NestedWeights"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/setting"
                android:background="@color/colorPrimaryLight"
                android:id="@+id/tv_main_bottom_setting"
                android:textSize="30sp"
                tools:ignore="NestedWeights"/>

    </LinearLayout>

</LinearLayout>
