<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="2"
                tools:ignore="NestedWeights">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:text="@string/add_lunch_en"
                      android:textColor="@color/colorPrimary"
                      android:textSize="40sp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:gravity="center"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20sp"
                    android:gravity="center">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurant_name"
                        android:textSize="30sp"
                        android:layout_marginEnd="20sp"
                        android:id="@+id/tv_restaurant_name"/>
                <EditText
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:autofillHints="@string/restaurant_name"
                        android:hint="@string/restaurant_name"
                        android:inputType="text"
                        android:id="@+id/edt_restaurant_name"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/preference"
                        android:textSize="30sp"
                        android:layout_marginEnd="20sp"
                        android:id="@+id/tv_preference"/>
                <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/rdg_preference">
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5sp"
                            android:text="@string/low"
                            android:id="@+id/rdbtn_preference_low"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5sp"
                            android:text="@string/middle"
                            android:id="@+id/rdbtn_preference_middle"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5sp"
                            android:checked="true"
                            android:text="@string/high"
                            android:id="@+id/rdbtn_preference_high"/>
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/ok_en"
                android:background="@color/colorOk"
                android:id="@+id/tv_add_lunch_ok"
                android:textSize="30sp" tools:ignore="NestedWeights"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/cancel_en"
                android:background="@color/colorCancel"
                android:id="@+id/tv_add_lunch_cancel"
                android:textSize="30sp"/>


    </LinearLayout>

</LinearLayout>
