<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddPeopleActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="2"
                tools:ignore="NestedWeights">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:text="@string/add_people_en"
                      android:textColor="@color/colorPrimary"
                      android:textSize="40sp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:gravity="center"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20sp"
                    android:gravity="center">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="30sp"
                        android:layout_marginEnd="20sp"
                        android:id="@+id/tv_name"/>
                <EditText
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:autofillHints="@string/name"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:id="@+id/edt_name"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/ok_en"
                android:background="@color/colorOk"
                android:id="@+id/tv_add_people_ok"
                android:textSize="30sp" tools:ignore="NestedWeights"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/cancel_en"
                android:background="@color/colorCancel"
                android:id="@+id/tv_add_people_cancel"
                android:textSize="30sp"/>


    </LinearLayout>

</LinearLayout>
